add tag <p> and tag <h1>

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>This is my first page</h1>
-</body>
+  </head>
+  <body>
+    <h1>it I am trenning</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing. Neque eligendi, a
+      eaque, esse itaque porro non exercitationem odio earum quos perferendis!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, nisi
+      quasi sapiente quisquam fugiat minus. Eaque voluptatem officiis vero
+      beatae illo temporibus amet nemo. Quasi inventore et nobis odio esse?
+      Doloremque, iste sit. Animi corporis aperiam, vitae ratione voluptas
+      dignissimos quisquam nisi quos soluta excepturi, laborum molestias
+      reiciendis ipsa minus inventore aliquid ipsam laboriosam optio, cupiditate
+      quas. Ab, a voluptatem. Vitae ab eos pariatur a, eius dolorum provident
+      quisquam iste repellendus porro laborum, modi reprehenderit reiciendis,
+      hic enim delectus doloribus velit harum suscipit ullam maxime sunt
+      corrupti? Eaque, eius minus. Excepturi officia, dolore, nisi facere
+      dolorem fugit impedit est sit eos at voluptate quas voluptatum provident,
+      repellat libero eum delectus! Tenetur quas laboriosam blanditiis
+      voluptates at vero facilis ipsa qui! Consectetur consequatur sed odio iste
+      doloremque architecto officia esse. Corrupti corporis commodi dolorum
+      provident. Sit inventore dicta magni eaque quae unde dolorum possimus
+      ullam sunt! Cum consectetur ea dolore vitae.
+    </p>
+  </body>
 </html>
