--- a/index.html
+++ b/index.html
@@ -12,22 +12,13 @@
       eaque, esse itaque porro non exercitationem odio earum quos perferendis!
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, nisi
-      quasi sapiente quisquam fugiat minus. Eaque voluptatem officiis vero
-      beatae illo temporibus amet nemo. Quasi inventore et nobis odio esse?
-      Doloremque, iste sit. Animi corporis aperiam, vitae ratione voluptas
-      dignissimos quisquam nisi quos soluta excepturi, laborum molestias
-      reiciendis ipsa minus inventore aliquid ipsam laboriosam optio, cupiditate
-      quas. Ab, a voluptatem. Vitae ab eos pariatur a, eius dolorum provident
-      quisquam iste repellendus porro laborum, modi reprehenderit reiciendis,
-      hic enim delectus doloribus velit harum suscipit ullam maxime sunt
-      corrupti? Eaque, eius minus. Excepturi officia, dolore, nisi facere
-      dolorem fugit impedit est sit eos at voluptate quas voluptatum provident,
-      repellat libero eum delectus! Tenetur quas laboriosam blanditiis
-      voluptates at vero facilis ipsa qui! Consectetur consequatur sed odio iste
-      doloremque architecto officia esse. Corrupti corporis commodi dolorum
-      provident. Sit inventore dicta magni eaque quae unde dolorum possimus
-      ullam sunt! Cum consectetur ea dolore vitae.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, maxime!
     </p>
+    <a href="https://google.com" class="link" target="_blank">google</a>
+    <img src="cat.jpg" alt="cute cat" />
+    <input type="text" name="user-name" />
+    <button type="submit">button</button>
+    <p>Всі права захищені <sub>&#xa9;</sub> Lex, 2020</p>
+    <p>Для полужирного тексту, виділіть його тегами <strong> і </strong>.</p>
   </body>
 </html>
