clean index.html

--- a/index.html
+++ b/index.html
@@ -5,20 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>it I am trenning</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing. Neque eligendi, a
-      eaque, esse itaque porro non exercitationem odio earum quos perferendis!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, maxime!
-    </p>
-    <a href="https://google.com" class="link" target="_blank">google</a>
-    <img src="cat.jpg" alt="cute cat" />
-    <input type="text" name="user-name" />
-    <button type="submit">button</button>
-    <p>Всі права захищені <sub>&#xa9;</sub> Lex, 2020</p>
-    <p>Для полужирного тексту, виділіть його тегами <strong> і </strong>.</p>
-  </body>
+  <body></body>
 </html>
